--- a/appointment.html
+++ b/appointment.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meet the Team</title>
+    <title>Appointment</title>
 </head>
 
 <body>
-    <img src="images/goldprovider.png" alt="2020 gold provider dentistry">
+
 </body>
 
 </html>
