content for MTT apppointment and insurance pages

--- a/appointment.html
+++ b/appointment.html
@@ -9,7 +9,11 @@
 </head>
 
 <body>
-
+    <h1>Request an Appointment</h1>
+    <p>Redmond Way Dentistry accepts requests for a dentist appointment for all of our services via phone or email.</p>
+    <h2>Setting up Your Dentist Appointment</h2>
+    <p>To request an appointment, please complete the email form at the bottom. We will respond either right away or at
+        the opening of business the following day (if an after hours request is made).</p>
 </body>
 
 </html>
