--- a/insurance.html
+++ b/insurance.html
@@ -8,8 +8,33 @@
     <title>Insurance</title>
 </head>
 
-<body>
-
+<body style="text-align: center;">
+    <h1>Dental Insurance</h1>
+    <ol>
+        <li>Delta Dental (PPO and Premier)</li>
+        <li>AARP</li>
+        <li>Aetna</li>
+        <li>Ameritas</li>
+        <li>Assurant</li>
+        <li>Cigna</li>
+        <li>Dentemax</li>
+        <li>DHA</li>
+        <li>Guardian</li>
+        <li>Humana</li>
+        <li>Kaiser Permanente</li>
+        <li>Lifemap</li>
+        <li>Lifewise</li>
+        <li>Metlife</li>
+        <li>Premera</li>
+        <li>Principal</li>
+        <li>Regence</li>
+        <li>Standard</li>
+        <li>Sunlife</li>
+        <li>United Concordia</li>
+        <li>United Healthcare</li>
+    </ol>
+    <p>If your insurance is not listed, please contact our office, and we will check your benefits before your
+        appointment.</p>
 </body>
 
 </html>
