--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                         <a class="nav-link" href="appointment.html">Request An Appointment</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="insurance.html">Insurance</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="meet_the_team.html">Meet The Team</a>
                     </li>
                     <li class="nav-item">
