second small change

--- a/index.html
+++ b/index.html
@@ -69,6 +69,16 @@
         </div>
     </nav>
 
+    <!--<div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero rem suscipit beatae quia accusamus quos
+            deleniti dolorum assumenda ducimus nulla temporibus, minus cumque! Animi accusantium recusandae aut rem,
+            illo asperiores! Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, quos nemo. Reiciendis at
+            doloribus, consequuntur nesciunt culpa mollitia nam expedita aspernatur consequatur, odio eaque recusandae,
+            maxime qui minus accusantium labore. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit iure
+            ipsa maxime, ea in aspernatur beatae et accusamus aut perspiciatis rerum, voluptatibus velit minima!
+            Voluptas consectetur perspiciatis aliquam adipisci veniam!</p>
+    </div>-->
+
     <div class="footer">
         Created by &copy; Redmond Web Renovators;
     </div>
