--- a/index.html
+++ b/index.html
@@ -7,43 +7,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
 
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="css/style.css">
 
 </head>
 
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-white">
+<body onload="document.body.style.opacity='1'">
+    <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">RWD</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="appointment.html">Request An Appointment</a>
+                        <a class="nav-link text-white" href="#">Appointment</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="insurance.html">Insurance</a>
+                        <a class="nav-link text-white" href="#">Team</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="meet_the_team.html">Meet The Team</a>
+                        <a class="nav-link text-white" href="#">Tour</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="office_tour.html">Office Tour</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
+
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Services
                         </a>
@@ -56,35 +47,45 @@
                             <li><a class="dropdown-item" href="#">Services3</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Contact</a>
-                    </li>
 
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="#">Contact</a>
+                    </li>
                 </ul>
-                <form class="d-flex">
+                <!--test<form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-primary" type="submit">Search</button>
-                </form>
+                    <button class="btn btn-outline-light" type="submit">Search</button>
+                </form>-->
             </div>
         </div>
     </nav>
-
-    <!--<div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero rem suscipit beatae quia accusamus quos
-            deleniti dolorum assumenda ducimus nulla temporibus, minus cumque! Animi accusantium recusandae aut rem,
-            illo asperiores! Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, quos nemo. Reiciendis at
-            doloribus, consequuntur nesciunt culpa mollitia nam expedita aspernatur consequatur, odio eaque recusandae,
-            maxime qui minus accusantium labore. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit iure
-            ipsa maxime, ea in aspernatur beatae et accusamus aut perspiciatis rerum, voluptatibus velit minima!
-            Voluptas consectetur perspiciatis aliquam adipisci veniam!</p>
-    </div>-->
-
-    <div class="footer">
-        Created by &copy; Redmond Web Renovators;
+    <div>
+        <h1 class="text-white text-center fade-in-h1 position-absolute top-50 start-50 translate-middle">Redmond Way
+            Dentistry</h1>
+        <img class="socialmediaiconsize" src="images/facebook-logo-24.png" alt="Facebook">
+        <img class="socialmediaiconsize" src="images/twitter-logo-24.png" alt="Twitter">
+        <img class="socialmediaiconsize" src="images/youtube-logo-24.png" alt="Youtube">
     </div>
+
+    <div class="smallspace"></div>
+    <div class="mx-auto"></div>
+    <div class="smallspace"></div>
+
+    <div class="bgimg-1"></div>
+    <div class="bgimg-2"></div>
+    <div class="bgimg-3"></div>
+
+
+
+
+
 
 
 
 </body>
+
+<script>
+    AOS.init();
+</script>
 
 </html>
