--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active text-white" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Appointment</a>
+                        <a class="nav-link text-white" href="appointment.html">Appointment</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Team</a>
+                        <a class="nav-link text-white" href="meet_the_team.html">Team</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Tour</a>
+                        <a class="nav-link text-white" href="office_tour.html">Tour</a>
                     </li>
 
                     <li class="nav-item dropdown">
@@ -49,7 +49,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Contact</a>
+                        <a class="nav-link text-white" href="contact.html">Contact</a>
                     </li>
                 </ul>
                 <!--test<form class="d-flex">
