--- a/insurance.html
+++ b/insurance.html
@@ -6,35 +6,93 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Insurance</title>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="css/style.css">
+    <style>
+        body {
+            background: url('/images/toothhills.jpg') no-repeat center center fixed white;
+            background-size: cover;
+        }
+    </style>
 </head>
 
-<body style="text-align: center;">
-    <h1>Dental Insurance</h1>
-    <ol>
-        <li>Delta Dental (PPO and Premier)</li>
-        <li>AARP</li>
-        <li>Aetna</li>
-        <li>Ameritas</li>
-        <li>Assurant</li>
-        <li>Cigna</li>
-        <li>Dentemax</li>
-        <li>DHA</li>
-        <li>Guardian</li>
-        <li>Humana</li>
-        <li>Kaiser Permanente</li>
-        <li>Lifemap</li>
-        <li>Lifewise</li>
-        <li>Metlife</li>
-        <li>Premera</li>
-        <li>Principal</li>
-        <li>Regence</li>
-        <li>Standard</li>
-        <li>Sunlife</li>
-        <li>United Concordia</li>
-        <li>United Healthcare</li>
-    </ol>
-    <p>If your insurance is not listed, please contact our office, and we will check your benefits before your
-        appointment.</p>
+<body onload="document.body.style.opacity='1'">
+    <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+        <div class="container-fluid">
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="#">Appointment</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="#">Team</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="#">Tour</a>
+                    </li>
+
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Services
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="#">Services1</a></li>
+                            <li><a class="dropdown-item" href="#">Services2</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="#">Services3</a></li>
+                        </ul>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="#">Contact</a>
+                    </li>
+                </ul>
+                <!--test<form class="d-flex">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-light" type="submit">Search</button>
+                </form>-->
+            </div>
+        </div>
+    </nav>
+
+    <div style="text-align: center; color: white;">
+        <h1>Dental Insurance</h1>
+        <ul style="list-style: none;">
+            <li>Delta Dental (PPO and Premier)</li>
+            <li>AARP</li>
+            <li>Aetna</li>
+            <li>Ameritas</li>
+            <li>Assurant</li>
+            <li>Cigna</li>
+            <li>Dentemax</li>
+            <li>DHA</li>
+            <li>Guardian</li>
+            <li>Humana</li>
+            <li>Kaiser Permanente</li>
+            <li>Lifemap</li>
+            <li>Lifewise</li>
+            <li>Metlife</li>
+            <li>Premera</li>
+            <li>Principal</li>
+            <li>Regence</li>
+            <li>Standard</li>
+            <li>Sunlife</li>
+            <li>United Concordia</li>
+            <li>United Healthcare</li>
+        </ul>
+        <p>If your insurance is not listed, please <a href="contact.html">Contact Our Office</a>, and we will check your
+            benefits before your
+            appointment.</p>
+    </div>
 </body>
 
 </html>
