--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
                     </li>
 
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Services
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -60,8 +59,8 @@
         </div>
     </nav>
     <div>
-        <h1 class="text-white text-center fade-in-h1 position-absolute top-50 start-50 translate-middle">Redmond Way
-            Dentistry</h1>
+        <h1 class="text-white text-center fade-in-h1 position-absolute top-50 start-50 translate-middle">Redmond Way Dentistry
+        </h1>
         <img class="socialmediaiconsize" src="images/facebook-logo-24.png" alt="Facebook">
         <img class="socialmediaiconsize" src="images/twitter-logo-24.png" alt="Twitter">
         <img class="socialmediaiconsize" src="images/youtube-logo-24.png" alt="Youtube">
