--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active text-white" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="appointment.html">Appointment</a>
+                        <a class="nav-link text-white" href="#">Appointment</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="meet_the_team.html">Team</a>
+                        <a class="nav-link text-white" href="#">Team</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="office_tour.html">Tour</a>
+                        <a class="nav-link text-white" href="#">Tour</a>
                     </li>
 
                     <li class="nav-item dropdown">
@@ -49,7 +49,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="contact.html">Contact</a>
+                        <a class="nav-link text-white" href="#">Contact</a>
                     </li>
                 </ul>
                 <!--test<form class="d-flex">
@@ -62,14 +62,16 @@
     <div>
         <h1 class="text-white text-center fade-in-h1 position-absolute top-50 start-50 translate-middle">Redmond Way
             Dentistry</h1>
-        <img class="socialmediaiconsize" src="images/facebook-logo-24.png" alt="Facebook">
-        <img class="socialmediaiconsize" src="images/twitter-logo-24.png" alt="Twitter">
-        <img class="socialmediaiconsize" src="images/youtube-logo-24.png" alt="Youtube">
+        <img class="socialmediaposition" src="images/facebook-logo-24.png" alt="Facebook">
+        <img class="socialmediaposition" src="images/twitter-logo-24.png" alt="Twitter">
+        <img class="socialmediaposition" src="images/youtube-logo-24.png" alt="Youtube">
+        <p style="text-align:center;">test</p>
     </div>
 
-    <div class="smallspace"></div>
-    <div class="mx-auto"></div>
-    <div class="smallspace"></div>
+    <div>
+        <div class="smallspace"></div>
+    </div>
+
 
     <div class="bgimg-1"></div>
     <div class="bgimg-2"></div>
