--- a/insurance.html
+++ b/insurance.html
@@ -16,6 +16,11 @@
             background: url('/images/toothhills.jpg') no-repeat center center fixed white;
             background-size: cover;
         }
+
+        .block3 {
+            text-align: center;
+            color: white;
+        }
     </style>
 </head>
 
@@ -64,9 +69,9 @@
         </div>
     </nav>
 
-    <div style="text-align: center; color: white;">
+    <div class="block3">
         <h1>Dental Insurance</h1>
-        <ul style="list-style: none;">
+        <ul>
             <li>Delta Dental (PPO and Premier)</li>
             <li>AARP</li>
             <li>Aetna</li>
