--- a/meet_the_team.html
+++ b/meet_the_team.html
@@ -13,8 +13,14 @@
     <link rel="stylesheet" href="css/style.css">
     <style>
         body {
-            background: url('/images/aesthetichill.png') no-repeat center center fixed white;
+            background: url('/images/bluebackground.jpg') no-repeat center center fixed white;
             background-size: cover;
+        }
+
+        .block2 {
+            text-align: center;
+            color: white;
+            margin: 70px;
         }
     </style>
 </head>
@@ -63,10 +69,11 @@
             </div>
         </div>
     </nav>
-    <div style="text-align: center; color: white;">
+    <div class="block2">
         <h1>Meet the Team</h1>
         <img style="border-radius: 5%;" src="images/goldprovider.png" alt="2020 gold provider dentistry">
         <h2>Caixia Lan DMD</h2>
+        <img style="float: left; height: 220px;" src="images/caixialan.jpg" alt="caixia lan">
         <p>Dr. Lan and her team are passionate about helping patients achieve optimal dental health through
             patient
             education and prevention. Dr. Lan’s priority is achieving lasting oral heath which starts by
@@ -86,6 +93,7 @@
         <p>Fluent languages to help patient communication: English, Mandarin, and Taiwanese.
         </p>
         <h2>Frank Rho DDS
+            <img style="float: right; height: 220px;" src="images/frankrho.jpg" alt="frank rho">
         </h2>
         <p>Dr. Rho offers 25 years of experience in general and advanced dentistry. He has dedicated his
             career to learning
@@ -115,6 +123,7 @@
             nowhere more
             beautiful than the Pacific Northwest.</p>
         <h2>Malavika Prasanna DDS</h2>
+        <img style="float: left; height: 220px;" src="images/malavika.jpg" alt="malavika prasanna">
         <p>Dr. Prasanna has a strong passion for restorative dentistry with a focus on communication and
             collaboration with
             her patients. This passion has allowed her to help her patients achieve their dental goals while
@@ -135,6 +144,14 @@
             scene, and most
             importantly spending time with her two children and family.</p>
     </div>
+    <footer>
+        <ul>
+            <li><a href="insurance.html">Insurance</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="appointment.html">Appointment</a></li>
+            <li></li>
+        </ul>
+    </footer>
 </body>
 
 </html>
