--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="css/style.css">
+    <style>
+        body {
+            background: url('../images/homepageimage.jpg') no-repeat center center fixed white;
+            background-size: cover;
+            background-color: rgb(26, 26, 28);
+
+        }
+    </style>
 
 </head>
 
@@ -74,15 +82,16 @@
         <img class="socialmediaposition" src="images/facebook-logo-24.png" alt="Facebook">
         <img class="socialmediaposition" src="images/twitter-logo-24.png" alt="Twitter">
         <img class="socialmediaposition" src="images/youtube-logo-24.png" alt="Youtube">
-        <p style="text-align:center;">test</p>
+        <p class="hometext">Welcome!<br><br></p>
+        <p class="hometext2">Finding a Redmond dentist you’re comfortable with is one of the most important health care
+            decisions you’ll ever make: According to the American Dental Association, there is a connection between a
+            healthy mouth and a healthy body.</p>
     </div>
 
-    <div>
-        <div class="smallspace"></div>
+
+    <div class="bgimg-1">
+        <h1 class="bgimg2header">Test</h1>
     </div>
-
-
-    <div class="bgimg-1"></div>
     <div class="bgimg-2"></div>
     <div class="bgimg-3"></div>
 
