push end of class friday

--- a/insurance.html
+++ b/insurance.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/style.css">
     <style>
         body {
-            background: url('/images/toothhills.jpg') no-repeat center center fixed white;
+            background: url('/images/eastsidepark.jpg') no-repeat center center fixed white;
             background-size: cover;
         }
 
