--- a/meet_the_team.html
+++ b/meet_the_team.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/style.css">
     <style>
         body {
-            background: url('/images/bluebackground.jpg') no-repeat center center fixed white;
+            background: url('/images/waterfall.jpg') no-repeat center center fixed white;
             background-size: cover;
         }
 
@@ -144,12 +144,23 @@
             scene, and most
             importantly spending time with her two children and family.</p>
     </div>
-    <footer>
-        <ul>
+    <footer style="background-color: black ; opacity: 50%; ">
+        <ul style="text-align: center;">
+            <li>Explore Our Site</li>
             <li><a href="insurance.html">Insurance</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="appointment.html">Appointment</a></li>
-            <li></li>
+            <li>Monday 8:00 am - 5:00 pm</li>
+            <li>Tuesday 8:00 am - 5:00 pm</li>
+            <li>Wednesday 8:00 am - 5:00 pm</li>
+            <li>Thursday 8:00 am - 5:00 pm</li>
+            <li>Friday 8:00 am - 5:00 pm</li>
+            <li>Saturday Call for Availability</li>
+            <li>Sunday Closed</li>
+            <li>Redmond Way Dentistry,
+                15946 Redmond Way #106,
+                Redmond, WA, 98052,
+                Phone: (425) 898-2168</li>
         </ul>
     </footer>
 </body>
