video and small changes

--- a/index.html
+++ b/index.html
@@ -82,10 +82,18 @@
         <img class="socialmediaposition" src="images/facebook-logo-24.png" alt="Facebook">
         <img class="socialmediaposition" src="images/twitter-logo-24.png" alt="Twitter">
         <img class="socialmediaposition" src="images/youtube-logo-24.png" alt="Youtube">
-        <p class="hometext">Welcome!<br><br></p>
-        <p class="hometext2">Finding a Redmond dentist you’re comfortable with is one of the most important health care
-            decisions you’ll ever make: According to the American Dental Association, there is a connection between a
-            healthy mouth and a healthy body.</p>
+
+        <p class="hometext">Welcome!<br><br>
+        <div class="smallspace"></div>
+        </p>
+        <p class="hometext2">Finding a Redmond dentist you’re comfortable with is one of the most important health <br>
+            care
+            decisions you’ll ever make: According to the American Dental Association, there is <br> a connection between
+            a
+            healthy mouth and a healthy body. So choosing the right dentist <br> is an intensely personal decision.
+            That’s why from the moment you walk into Redmond <br> Way Dentistry, you’ll know you’re in a unique dental
+            office. Redmond Way Dentistry is:
+        </p>
     </div>
 
 
@@ -93,7 +101,16 @@
         <h1 class="bgimg2header">Test</h1>
     </div>
     <div class="bgimg-2"></div>
-    <div class="bgimg-3"></div>
+    <div class="bgimg-3">
+        <div class="video-container">
+            <video autoplay poster="" class="video-parallax" loop muted>
+                <source
+                    src="https://cdn.pixabay.com/vimeo/323496013/Seoul%20-%2021985.mp4?width=1280&expiry=1674241607&hash=267c9e61954a66e665c3788d8ccedf162603550c"
+                    type="video/webm">
+            </video>
+        </div>
+    </div>
+
 
 
 
