--- a/index.html
+++ b/index.html
@@ -102,13 +102,13 @@
     </div>
     <div class="bgimg-2"></div>
     <div class="bgimg-3">
-        <div class="video-container">
+        <!--<div class="video-container">
             <video autoplay poster="" class="video-parallax" loop muted>
                 <source
                     src="https://cdn.pixabay.com/vimeo/323496013/Seoul%20-%2021985.mp4?width=1280&expiry=1674241607&hash=267c9e61954a66e665c3788d8ccedf162603550c"
                     type="video/webm">
             </video>
-        </div>
+        </div>-->
     </div>
 
 
