small change test

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         body {
             background: url('../images/homepageimage.jpg') no-repeat center center fixed white;
             background-size: cover;
-            background-color: rgb(26, 26, 28);
+            /*background-color: rgb(26, 26, 28);*/
 
         }
     </style>
