fixes to home page with style

--- a/index.html
+++ b/index.html
@@ -76,24 +76,42 @@
             </div>
         </div>
     </nav>
-    <div>
+    <div class="fade-in-h1">
         <h1 class="text-white text-center fade-in-h1 position-absolute top-50 start-50 translate-middle">Redmond Way
             Dentistry</h1>
-        <img class="socialmediaposition" src="images/facebook-logo-24.png" alt="Facebook">
-        <img class="socialmediaposition" src="images/twitter-logo-24.png" alt="Twitter">
-        <img class="socialmediaposition" src="images/youtube-logo-24.png" alt="Youtube">
+        <a target="_blank" href="https://www.facebook.com/RedmondDentist"><img class="facebooksocialmediaiconposition"
+                src="images/facebook-logo-24.png" alt="Facebook"></a>
+        <a target="_blank" href="https://twitter.com/DrHoggDDS"><img class="twittersocialmediaiconposition"
+                src="images/twitter-logo-24.png" alt="Twitter"></a>
+        <a target="_blank" href="https://www.youtube.com/user/DentistRedmond"><img
+                class="youtubesocialmediaiconposition" src="images/youtube-logo-24.png" alt="Youtube"></a>
 
-        <p class="hometext">Welcome!<br><br>
-        <div class="smallspace"></div>
-        </p>
-        <p class="hometext2">Finding a Redmond dentist you’re comfortable with is one of the most important health <br>
+
+        <div data-aos="fade-up" data-aos-anchor-placement="center-center">
+            <p class="hometext"><br><br><br><br><br><br><br><br> Welcome!<br><br>
+            <div class="smallspace"></div>
+            </p>
+        </div>
+        <p class="hometext2"><br><br><br><br><br><br><br> Finding a Redmond dentist you're comfortable with is one
+            of
+            the most important
+            health <br>
             care
-            decisions you’ll ever make: According to the American Dental Association, there is <br> a connection between
+            decisions you'll ever make: According to the American Dental Association, there is <br> a connection
+            between
             a
             healthy mouth and a healthy body. So choosing the right dentist <br> is an intensely personal decision.
-            That’s why from the moment you walk into Redmond <br> Way Dentistry, you’ll know you’re in a unique dental
+            That's why from the moment you walk into Redmond <br> Way Dentistry, you'll know you're in a unique
+            dental
             office. Redmond Way Dentistry is:
+
         </p>
+        <div data-aos="fade-up" data-aos-anchor-placement="center-center">
+            <h1 style="text-align:center; font-size:75px;">Anish</h1>
+            <div>
+                <h4 style="text-align:center">Role: Copyrighter</h4>
+            </div>
+        </div>
     </div>
 
 
@@ -102,6 +120,9 @@
     </div>
     <div class="bgimg-2"></div>
     <div class="bgimg-3">
+        <video id="background-video" class="fadeinbackgroundvideo" autoplay loop muted>
+            <source src="images/seoul.mp4" type="video/mp4">
+        </video>
         <!--<div class="video-container">
             <video autoplay poster="" class="video-parallax" loop muted>
                 <source
@@ -110,21 +131,104 @@
             </video>
         </div>-->
     </div>
+    <!--<div class="footer" style="text-align:center; color:white;">Created by &copy; Redmond Web Renovators 2023</div>-->
+    <!-- Footer -->
+    <footer class="bg-dark text-center text-white">
+        <!-- Grid container -->
+        <div class="container p-4">
+            <!-- Section: Social media -->
+            <section class="mb-4">
+                <!-- Facebook -->
+                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
+                        class="fab fa-facebook-f"></i></a>
+
+                <!-- Twitter -->
+                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
+                        class="fab fa-twitter"></i></a>
+
+                <!-- Google -->
+                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
+                        class="fab fa-google"></i></a>
+
+                <!-- Instagram -->
+                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
+                        class="fab fa-instagram"></i></a>
+
+                <!-- Linkedin -->
+                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
+                        class="fab fa-linkedin-in"></i></a>
+
+                <!-- Github -->
+                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
+                        class="fab fa-github"></i></a>
+            </section>
+            <!-- Section: Social media -->
+
+            <!-- Section: Form -->
+            <section class="">
+                <form action="">
+                    <!--Grid row-->
+                    <div class="row d-flex justify-content-center">
+                        <!--Grid column-->
+                        <div class="col-auto">
+                            <p class="pt-2">
+                                <strong>Sign up for our newsletter</strong>
+                            </p>
+                        </div>
+
+                        <!--Grid column-->
+                        <div class="col-md-5 col-12">
+                            <!-- Email -->
+                            <div class="form-outline form-white mb-4">
+                                <input type="email" id="form5Example21" class="form-control" />
+                                <label class="form-label" for="form5Example21">Email address</label>
+                            </div>
+                        </div>
+                        <!--Grid column-->
+
+                        <div class="col-auto">
+                            <button type="submit" class="btn btn-outline-light mb-4">
+                                Subscribe
+                            </button>
+                        </div>
+                    </div>
+                </form>
+            </section>
+            <!-- Form -->
+
+            <!-- Text -->
+            <section class="mb-4">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt distinctio earum
+                    repellat quaerat voluptatibus placeat nam, commodi optio pariatur est quia magnam
+                    eum harum corrupti dicta, aliquam sequi voluptate quas. Lorem ipsum dolor sit amet consectetur
+                    adipisicing elit. Impedit doloremque, molestiae labore illum quod quo, nulla nemo soluta
+                    consequatur
+                    facere perspiciatis vero reiciendis deserunt distinctio voluptatem veniam quis sapiente tempore!
+                </p>
+            </section>
+        </div>
+
+        <!-- Copyright -->
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+            © 2023 Copyright:
+            <a class="text-white" href="index.html">Redmond Web Renovators</a>
+        </div>
+    </footer>
 
 
 
 
 
 
-
-
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 
 
 
 </body>
 
-<script>
-    AOS.init();
-</script>
 
 </html>
