making compatible nav bar

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 
 <body onload="document.body.style.opacity='1'">
-    <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+    <nav class="navbar navbar-expand-lg navbar-light bg-transparent fixed-top">
         <div class="container-fluid">
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -88,28 +88,46 @@
 
 
         <div data-aos="fade-up" data-aos-anchor-placement="center-center">
-            <p class="hometext"><br><br><br><br><br><br><br><br> Welcome!<br><br>
+            <p class="hometext"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+                Welcome!<br><br>
             <div class="smallspace"></div>
             </p>
         </div>
-        <p class="hometext2"><br><br><br><br><br><br><br> Finding a Redmond dentist you're comfortable with is one
-            of
-            the most important
-            health <br>
-            care
-            decisions you'll ever make: According to the American Dental Association, there is <br> a connection
-            between
-            a
-            healthy mouth and a healthy body. So choosing the right dentist <br> is an intensely personal decision.
-            That's why from the moment you walk into Redmond <br> Way Dentistry, you'll know you're in a unique
-            dental
-            office. Redmond Way Dentistry is:
+        <p class="hometext2">
+            <br><br><br><br><br><br><br><br><br><br><br><br><br><b><br><br><br><br><br><br><br><br><br><br></br> Finding
+                a Redmond
+                dentist you're comfortable with is one
+                of
+                the most important
+                health <br>
+                care
+                decisions you'll ever make: According to the American Dental Association, there is <br> a connection
+                between
+                a
+                healthy mouth and a healthy body. So choosing the right dentist <br> is an intensely personal decision.
+                That's why from the moment you walk into Redmond <br> Way Dentistry, you'll know you're in a unique
+                dental
+                office. Redmond Way Dentistry is:
 
         </p>
         <div data-aos="fade-up" data-aos-anchor-placement="center-center">
-            <h1 style="text-align:center; font-size:75px;">Anish</h1>
+            <h1 style="text-align:center; font-size:40px;">Welcome!<br><br></h1>
             <div>
-                <h4 style="text-align:center">Role: Copyrighter</h4>
+                <h4 style="text-align:center; color:white;">Finding
+                    a Redmond
+                    dentist you're comfortable with is one
+                    of
+                    the most important
+                    health <br>
+                    care
+                    decisions you'll ever make: According to the American Dental Association, there is <br> a connection
+                    between
+                    a
+                    healthy mouth and a healthy body. So choosing the right dentist <br> is an intensely personal
+                    decision.
+                    That's why from the moment you walk into Redmond <br> Way Dentistry, you'll know you're in a unique
+                    dental
+                    office. Redmond Way Dentistry is:</h4>
             </div>
         </div>
     </div>
