--- a/index.html
+++ b/index.html
@@ -88,13 +88,16 @@
 
 
         <div data-aos="fade-up" data-aos-anchor-placement="center-center">
-            <p class="hometext"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+            <p class="hometext"><br><br><br><br><br><br><br><br><br><br><br><br><br>
                 Welcome!<br><br>
             <div class="smallspace"></div>
             </p>
         </div>
-        <p class="hometext2">
-            <br><br><br><br><br><br><br><br><br><br><br><br><br><b><br><br><br><br><br><br><br><br><br><br></br> Finding
+
+        <div data-aos="fade-up" data-aos-anchor-placement="center-center">
+            <p style="text-align:center;font-size:25px;">
+                <br><br><br><br><br><br><br><br><br><br><br><br>
+                Finding
                 a Redmond
                 dentist you're comfortable with is one
                 of
@@ -104,32 +107,66 @@
                 decisions you'll ever make: According to the American Dental Association, there is <br> a connection
                 between
                 a
-                healthy mouth and a healthy body. So choosing the right dentist <br> is an intensely personal decision.
+                healthy mouth and a healthy body. So choosing the right dentist <br> is an intensely personal
+                decision.
                 That's why from the moment you walk into Redmond <br> Way Dentistry, you'll know you're in a unique
                 dental
                 office. Redmond Way Dentistry is:
 
-        </p>
-        <div data-aos="fade-up" data-aos-anchor-placement="center-center">
-            <h1 style="text-align:center; font-size:40px;">Welcome!<br><br></h1>
-            <div>
-                <h4 style="text-align:center; color:white;">Finding
-                    a Redmond
-                    dentist you're comfortable with is one
-                    of
-                    the most important
-                    health <br>
-                    care
-                    decisions you'll ever make: According to the American Dental Association, there is <br> a connection
-                    between
-                    a
-                    healthy mouth and a healthy body. So choosing the right dentist <br> is an intensely personal
-                    decision.
-                    That's why from the moment you walk into Redmond <br> Way Dentistry, you'll know you're in a unique
-                    dental
-                    office. Redmond Way Dentistry is:</h4>
-            </div>
+                <br><br><br><br>
+            </p>
         </div>
+
+
+
+        <div data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
+            <ul><br>
+                <li class="bulletpointfontsize"
+                    style="font: size 20px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">A
+                    family-oriented, warm and welcoming environment in which your comfort,
+                    quality dental care <br> and convenience come first</li>
+            </ul>
+        </div>
+
+        <div data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
+            <ul><br>
+                <li class="bulletpointfontsize"
+                    style="font: size 20px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">A
+                    highly professional office in which each member of your family receives superlative dental
+                    care <br> from our expert, caring and gentle staff</li>
+            </ul>
+        </div>
+
+        <div data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
+            <ul><br>
+                <li class="bulletpointfontsize"
+                    style="font: size 20px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">A
+                    environmentally conscious office in which your oral health will be enhanced by our <br>
+                    state-of-the-art technology and techniques.</li>
+            </ul>
+        </div>
+
+        <div data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
+            <ul><br>
+                <li class="bulletpointfontsize"
+                    style="font: size 20px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">A
+                    office that provides solutions to all of your dental needs: General, cosmetic and family
+                    dentistry <br> in one convenient location.</li>
+            </ul>
+        </div>
+
+        <div data-aos="fade-up" data-aos-offset="500" data-aos-easing="ease-in-sine"
+            data-aos-anchor-placement="center-center">
+            <p class="hometext3"> See for yourself: If you are looking for a
+                Redmond dentist come
+                visit our office in down town Redmond conveniently located near Trader Joe’s. When you visit, you’ll
+                discover how Redmond Way Dentistry represents the latest evolution in comprehensive oral care.</p>
+        </div>
+
+        <div data-aos="fade-up" data-aos-offset="600" data-aos-easing="ease-in-sine">
+            <p class="hometext4">We offer the following services, and more:</p>
+        </div>
+    </div>
     </div>
 
 
