--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 
 <body onload="document.body.style.opacity='1'">
-    <nav class="navbar navbar-expand-lg navbar-light bg-transparent fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
         <div class="container-fluid">
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -155,7 +155,7 @@
             </ul>
         </div>
 
-        <div data-aos="fade-up" data-aos-offset="500" data-aos-easing="ease-in-sine"
+        <div data-aos="fade-up" data-aos-offset="275" data-aos-easing="ease-in-sine"
             data-aos-anchor-placement="center-center">
             <p class="hometext3"> See for yourself: If you are looking for a
                 Redmond dentist come
@@ -163,61 +163,58 @@
                 discover how Redmond Way Dentistry represents the latest evolution in comprehensive oral care.</p>
         </div>
 
-        <div data-aos="fade-up" data-aos-offset="600" data-aos-easing="ease-in-sine">
+        <div data-aos="fade-up" data-aos-offset="300" data-aos-easing="ease-in-sine">
             <p class="hometext4">We offer the following services, and more:</p>
         </div>
+
+
     </div>
-    </div>
+
 
 
     <div class="bgimg-1">
-        <h1 class="bgimg2header">Test</h1>
+        <h1 class="bgimg2header">Your New Redmond Dentist is Conveniently located by Trader Joe’s</h1>
+        <p class="hometext6">We are located in the QFC-Ben Franklin shopping center, across
+            the parking lot
+            from Trader Joe’s grocery
+            store in downtown Redmond, Washington.</p>
+        <p class="hometext7">At Redmond Way Dentistry, we accept Dental insurance from the majority of dental insurance
+            carriers.</p>
     </div>
     <div class="bgimg-2"></div>
-    <div class="bgimg-3">
+    <!--<div class="bgimg-3">
         <video id="background-video" class="fadeinbackgroundvideo" autoplay loop muted>
             <source src="images/seoul.mp4" type="video/mp4">
         </video>
-        <!--<div class="video-container">
-            <video autoplay poster="" class="video-parallax" loop muted>
-                <source
-                    src="https://cdn.pixabay.com/vimeo/323496013/Seoul%20-%2021985.mp4?width=1280&expiry=1674241607&hash=267c9e61954a66e665c3788d8ccedf162603550c"
-                    type="video/webm">
-            </video>
-        </div>-->
-    </div>
+
+    </div>-->
     <!--<div class="footer" style="text-align:center; color:white;">Created by &copy; Redmond Web Renovators 2023</div>-->
     <!-- Footer -->
     <footer class="bg-dark text-center text-white">
-        <!-- Grid container -->
-        <div class="container p-4">
-            <!-- Section: Social media -->
-            <section class="mb-4">
-                <!-- Facebook -->
-                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
-                        class="fab fa-facebook-f"></i></a>
 
-                <!-- Twitter -->
+        <div class="container p-4">
+
+            <section class="mb-4">
+
                 <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
                         class="fab fa-twitter"></i></a>
 
-                <!-- Google -->
+
                 <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
                         class="fab fa-google"></i></a>
 
-                <!-- Instagram -->
+
                 <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
                         class="fab fa-instagram"></i></a>
 
-                <!-- Linkedin -->
                 <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
                         class="fab fa-linkedin-in"></i></a>
 
-                <!-- Github -->
+
                 <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
                         class="fab fa-github"></i></a>
             </section>
-            <!-- Section: Social media -->
+
 
             <!-- Section: Form -->
             <section class="">
@@ -231,7 +228,7 @@
                             </p>
                         </div>
 
-                        <!--Grid column-->
+
                         <div class="col-md-5 col-12">
                             <!-- Email -->
                             <div class="form-outline form-white mb-4">
